src/objects/ADvendio__Key__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the KeyValue Manager and Media Configuration, only active marked records will be available.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServerId__c</fullName>
        <label>Ad Server ID</label>
        <referenceTo>ADvendio__AdServer_ID__c</referenceTo>
        <relationshipLabel>Keys</relationshipLabel>
        <relationshipName>Keys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExternalName__c</fullName>
        <description>This name will be used for PDF document.</description>
        <inlineHelpText>This name will be used for PDF document.</inlineHelpText>
        <label>External Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Predefined__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Uncheck if you want to allow freeform values for this key.</inlineHelpText>
        <label>Predefined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_TargetingAufschlag__c</fullName>
        <description>Altes Feld wird im Zuge des Rückbaus entfernt werden.</description>
        <inlineHelpText>Altes Feld wird im Zuge des Rückbaus entfernt werden.</inlineHelpText>
        <label>Targeting Aufschlag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_TargetingProvider__c</fullName>
        <description>Zusammenfassung von Keys zu einer Gruppe, welche über einen technischen Dienstleister/Site/Seitenbetreiber zur Verfügung gestellt werden können. Vereinfacht die Zuordnung von mehreren Keys zu Werbemittel/Produkten.</description>
        <inlineHelpText>Zusammenfassung von Keys zu einer Gruppe, welche über einen technischen Dienstleister/Site/Seitenbetreiber zur Verfügung gestellt werden können. Vereinfacht die Zuordnung von mehreren Keys zu Werbemittel/Produkten.</inlineHelpText>
        <label>Targeting Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ATV_PBT</fullName>
                </value>
                <value>
                    <fullName>Autosites</fullName>
                </value>
                <value>
                    <fullName>Diverse Kriterien</fullName>
                </value>
                <value>
                    <fullName>Gesundheit.de</fullName>
                </value>
                <value>
                    <fullName>nugg.ad</fullName>
                </value>
                <value>
                    <fullName>nugg.ad InApp</fullName>
                </value>
                <value>
                    <fullName>Rotationsausschluss</fullName>
                </value>
                <value>
                    <fullName>SmartGeo</fullName>
                </value>
                <value>
                    <fullName>Vereinssites</fullName>
                </value>
                <value>
                    <fullName>wetter.com</fullName>
                </value>
                <value>
                    <fullName>wetter.com CTV</fullName>
                </value>
                <value>
                    <fullName>ZG S71 Paket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_TargetingType__c</fullName>
        <description>Targeting Typ</description>
        <inlineHelpText>Targeting Typ</inlineHelpText>
        <label>Targeting Typ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Behavioral</fullName>
                </value>
                <value>
                    <fullName>Demographic</fullName>
                </value>
                <value>
                    <fullName>Retargeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Key</label>
    <listViews>
        <fullName>ADvendio__Alle</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__AdServerId__c</columns>
        <columns>ADvendio__Predefined__c</columns>
        <columns>ADvendio__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Keys</fullName>
        <columns>NAME</columns>
        <columns>SomDig_TargetingProvider__c</columns>
        <columns>SomDig_TargetingType__c</columns>
        <columns>SomDig_TargetingAufschlag__c</columns>
        <columns>ADvendio__AdServerId__c</columns>
        <columns>ADvendio__UniqueKey__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Keys</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Key Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Keys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>